--- a/templates/user.ejs
+++ b/templates/user.ejs
@@ -1,28 +1,25 @@
+
 <!DOCTYPE html>
 <html lang=en>
   <head>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" type="text/css" href="css/tacit-css.min.css"/>
-    <title>The Vulnerable Movie Center</title>
-    <style>
-      body {
-        padding-top:0px;
-      }
-      .thin {
-        margin-top:5px;
-        margin-bottom:5px;
-      }
-    </style>    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <link rel="stylesheet" href="css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>LaptopBay</title>    
   </head>
   <body>
     <section>
-      <h1 style="margin-top:5px">The Vulnerable Movie Center</h1>
+      <h1 style="margin-top:5px">The LaptopBay</h1>
       
       <hr class="thin">
 
       <div style="text-align: right">
-        <a href="/">Home</a>
+        <a class="login-btn btn" href="/">Home</a>
       </div>
 
       <form method="post" action="user">
@@ -30,19 +27,17 @@
           <label for="username">Your name:</label>
           <input name="username" type="text" value="<%= username %>" class="thin">
         </fieldset>
-
+        
         <fieldset>
           <label for="email">Your email:</label>
           <input name="email" type="email" value="<%= email %>" class="thin">
-
-          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         </fieldset>
 
         <fieldset>
-          <button type="submit" class="thin">Save</button></form>
+          <button type="submit" class="thin submit-btn">Save</button></form>
         </fieldset>
       </form>
     </section>
-    
+  
   </body>
 </html>
