--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -101,7 +101,7 @@
     </section>
 
     <section id="comments">
-      <form method="post" action="reviews" class="container">
+      <form method="post" action="pay" class="container">
         
           <% if (!isValidSession) { %>
           <div class="row login-statement">
