--- a/templates/user.ejs
+++ b/templates/user.ejs
@@ -33,9 +33,17 @@
           <input name="email" type="email" value="<%= email %>" class="thin">
         </fieldset>
 
+        <h5>Your Card Details : </h5>
         <fieldset>
-          <button type="submit" class="thin submit-btn">Save</button></form>
+          <label for="card">Card Number:</label>
+          <input name="card" type="number" value="<%= cardDetails %>" class="thin">
         </fieldset>
+
+        <fieldset>
+          <label for="cvv">CVV:</label>
+          <input name="cvv" type="number" value="<%= cvv %>" class="thin">
+        </fieldset>
+
       </form>
     </section>
   
